# bazel_compile_commands

./: BUILD.bazel  README.md  extract_compile_command.cc  gen_compile_commands.sh
.github/workflows/: release.yml
example/: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  example.cpp
